--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
+    "get-starknet-core": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "starknet": "^6.1.5",
+    "tokenbound-connector": "^0.2.20",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
